Ajout de quelques jeux

--- a/index.html
+++ b/index.html
@@ -1,43 +1,48 @@
 ---
 layout: default
-title: Sera - OnePage Multi-Purpose Theme
+title: Les Magicarpes
 ---
 
-
-{% include sections/offer.html offer-text="<strong>S</strong><span class=\"thin\">era</span> is your last template theme ever!" button-text="Buy Now" %}
+{% comment %}
+{% include sections/offer.html offer-text="<strong>M</strong><span class=\"thin\">agicarpes</span> sont votre nouvelle référence" button-text="Voir le blog" %}
+{% endcomment %}
 
 {% include sections/about.html %}
 
+{% comment %}
 {% include sections/features.html %}
+{% endcomment %}
 
+{% comment %}
 {% include sections/portfolio.html %}
+{% endcomment %}
 
 {% include sections/parallax-features.html %}
 
-{% include sections/offer.html offer-text="<strong>S</strong><span class=\"thin\">era</span> is here, download now!" button-text="Buy Now" %}
+{% comment %}
+{% include sections/offer.html offer-text="<strong>M</strong><span class=\"thin\">agicarpes</span> is here, download now!" button-text="Buy Now" %}
+{% endcomment %}
 
+{% comment %}
 {% include sections/testimonials.html %}
+{% endcomment %}
 
 {% include sections/blog.html %}
 
+{% comment %}
 {% include sections/team.html %}
+{% endcomment %}
 
-{% include sections/offer.html offer-text="<strong>S</strong><span class=\"thin\">era</span>, a new generation of themes!" button-text="Buy Now" %}
+{% comment %}
+{% include sections/offer.html offer-text="<strong>M</strong><span class=\"thin\">agicarpes</span>, a new generation of themes!" button-text="Buy Now" %}
+{% endcomment %}
 
+{% comment %}
 {% include sections/prices.html %}
+{% endcomment %}
 
 {% include sections/contact.html %}
 
-{% include sections/offer.html offer-text="<strong>S</strong><span class=\"thin\">era</span> is here, download now!" button-text="Buy Now" %}
-
-<script>
-  if (window.netlifyIdentity) {
-    window.netlifyIdentity.on("init", user => {
-      if (!user) {
-        window.netlifyIdentity.on("login", () => {
-          document.location.href = "/admin/";
-        });
-      }
-    });
-  }
-</script>
+{% comment %}
+{% include sections/offer.html offer-text="<strong>M</strong><span class=\"thin\">agicarpes</span> is here, download now!" button-text="Buy Now" %}
+{% endcomment %}
