--- a/admin/index.html
+++ b/admin/index.html
@@ -8,6 +8,7 @@
     <title>Content Manager</title>
   </head>
   <body>
+    <div data-netlify-identity-menu></div>
     <!-- Include the script that builds the page and powers Netlify CMS -->
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
   </body>
